--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="js/bustime.js"></script>
 
     <title>Bustime Tracker</title>
